Fix: Recently pushed branches are in the wrong position on forked repos (#1093)

--- a/source/content.css
+++ b/source/content.css
@@ -779,8 +779,9 @@ summary.HeaderNavlink::before {
 [data-url$='recently_touched_branches_list'] {
 	min-width: 400px; /* Always cover the repo watch/star/forks actions */
 	max-height: 35px; /* Only cover the actions */
+	padding-top: 10px;
 	position: absolute;
-	top: -107px;
+	top: -117px;
 	right: 0;
 	z-index: 10;
 	background: var(--github-gray-background);
